src/objects/loan_ix__API_Process_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Loan_Payment_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>API Process Logs</relationshipLabel>
        <relationshipName>API_Process_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan_ix__API_Reference__c</fullName>
        <label>API Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ix__External_Call_Reference__c</fullName>
        <label>External Call Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ix__Http_Status_Code__c</fullName>
        <label>Http Status Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan_ix__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>SUCCESSFUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAILURE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan_ix__TimeStamp__c</fullName>
        <inlineHelpText>Timestamp when the API response was received to system.</inlineHelpText>
        <label>TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <label>API Process Log</label>
    <nameField>
        <displayFormat>APL-{00000000}</displayFormat>
        <label>API Process Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Process Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>